# src/Admitto.Core/Registrations/Application/UseCases/Registrations/UpdatePartnerRegistration/PartnerApi/UpdatePartnerRegistrationHttpEndpoint.cs
@@ -3,37 +3,39 @@ using Amolenk.Admitto.Core.Shared.Application.Auth;
 using Amolenk.Admitto.Core.Shared.Application.Messaging;
 using Amolenk.Admitto.Core.Shared.Application.Persistence;
 
-namespace Amolenk.Admitto.Core.Registrations.Application.UseCases.Registrations.ChangeAttendeeTickets.PartnerApi;
+namespace Amolenk.Admitto.Core.Registrations.Application.UseCases.Registrations.UpdatePartnerRegistration.PartnerApi;
 
-public static class SelfChangeTicketsHttpEndpoint
+public static class UpdatePartnerRegistrationHttpEndpoint
 {
-    public static RouteGroupBuilder MapSelfChangeTickets(this RouteGroupBuilder group)
+    public static RouteGroupBuilder MapUpdatePartnerRegistration(this RouteGroupBuilder group)
     {
-        group.MapPut("/registrations/{registrationId:guid}/tickets", SelfChangeTickets)
-            .WithName(nameof(SelfChangeTickets));
+        group.MapPut("/registrations/{registrationId:guid}", UpdatePartnerRegistration)
+            .WithName(nameof(UpdatePartnerRegistration));
 
         return group;
     }
 
-    private static async ValueTask<IResult> SelfChangeTickets(
+    private static async ValueTask<IResult> UpdatePartnerRegistration(
         HttpContext httpContext,
         string eventSlug,
         Guid registrationId,
-        SelfChangeTicketsHttpRequest request,
+        UpdatePartnerRegistrationHttpRequest request,
         PartnerTicketedEventResolver eventResolver,
-        ICommandHandler<ChangeAttendeeTicketsCommand> handler,
+        ICommandHandler<UpdatePartnerRegistrationCommand> handler,
         [FromKeyedServices(RegistrationsModule.Key)]
         IUnitOfWork unitOfWork,
         CancellationToken cancellationToken)
     {
         var teamId = httpContext.User.GetRequiredTeamId();
         var eventId = await eventResolver.ResolveAsync(TeamId.From(teamId), eventSlug, cancellationToken);
-        var command = new ChangeAttendeeTicketsCommand(
+        var command = new UpdatePartnerRegistrationCommand(
             eventId.Value,
             teamId,
             registrationId,
+            request.FirstName,
+            request.LastName,
             request.TicketTypeIds ?? [],
-            ChangeMode.SelfService,
+            request.AdditionalDetails,
             request.WaitlistCouponCode);
 
         await handler.HandleAsync(command, cancellationToken);
